# dense_odometry

./: .gitignore  CMakeLists.txt  ReadMe
debug_tests/: test_Jacobean.cpp  test_matrix_multiplication_on_gpu.cpp  visualizationTools.cpp
gpu_kernels/: bootstrapper.cu  bootstrapper.hpp  gpu_manager.cu  gpu_manager.hpp
include/: cam_model.hpp  manager.hpp  optimizer copy.hpp  optimizer.hpp  utils.hpp
src/: cam_model.cpp  cuda_trials.cpp  main copy.cpp  main.cpp  manager.cpp  utils.cpp
